--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -1,2 +1,2 @@
-akka.persistence.journal.plugin = "akka.persistence.journal.inmem"
+akka.persistence.journal.plugin = "akka.persistence.journal.leveldb"
 akka.persistence.snapshot-store.local.dir = "target/snapshots"
