--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,15 +1,6 @@
-akka {
-  loggers = ["akka.event.slf4j.Slf4jLogger"]
-  loglevel = DEBUG
-}
+akka.persistence.journal.plugin = "akka.persistence.journal.inmem"
+akka.persistence.journal.leveldb.dir = "target/example/journal"
 
-akka.persistence.journal.leveldb.native = off
-akka.persistence.journal.leveldb-shared.store.native = off
-
-spray.can.server {
-  request-timeout = 5s
-}
-
-spray.routing {
-   verbose-error-messages = on
-}
+# DO NOT USE THIS IN PRODUCTION !!!
+# See also https://github.com/typesafehub/activator/issues/287
+akka.persistence.journal.leveldb.native = false
