--- a/src/test/resources/reference.conf
+++ b/src/test/resources/reference.conf
@@ -7,3 +7,16 @@ akka.persistence.snapshot-store.local.dir = "target/example/snapshots"
 # DO NOT USE THIS IN PRODUCTION !!!
 # See also https://github.com/typesafehub/activator/issues/287
 akka.persistence.journal.leveldb.native = false
+
+
+akka.persistence.journal {
+  leveldb {
+    event-adapters {
+      tagging        = "am.reachme.service.TagUserEvents"
+    }
+ 
+    event-adapter-bindings {
+      "am.reachme.service.Aggregate$Event"        = tagging
+	    }
+  }
+}
